modules/gdscript/tests/scripts/parser/errors/duplicate_tool.gd
@tool
@tool

func test():
	pass
